# BIOMOT_EXOSKELETON_ROS

./: .gitignore  CMakeLists.txt  Contributors.txt  README.md  package.xml  tree.txt
configure_BeagleBone_Black/: BBB_Change_USB0_address.txt  BBB_Configuration_instructions.txt  BBB_File_etc_network_interfaces.txt  BBB_Install_Wifi_driver_for_WiFi_dongle_TP-LINK_WN725N.txt  BBB_Internet_over_USB_only.txt  FSR_ON.sh  LCAN.sh  LGPIO.sh  dtc.sh
include/: ReadAIN.h  constants.h
include/AUX_VAR_GUI/: aux_var_gui.cpp  aux_var_gui.h  aux_var_gui.ui
include/COMMANDS_GUI/: commands_gui.cpp  commands_gui.h  commands_gui.ui
include/JOINT_ANGLES_GUI/: joint_angles_gui.cpp  joint_angles_gui.h  joint_angles_gui.ui
include/JOINT_INFORMATION_GUI/: joint_information_gui.cpp  joint_information_gui.h  joint_information_gui.ui
include/PARALLEL_SPRING_INFORMATION_GUI/: parallel_spring_information_gui.cpp  parallel_spring_information_gui.h  parallel_spring_information_gui.ui
include/PATTERNS_GUI/: patterns_gui.cpp  patterns_gui.h  patterns_gui.ui  worker_thread_patterns_gui.cpp  worker_thread_patterns_gui.h
include/PID_GUI/: pid_gui.cpp  pid_gui.h  pid_gui.ui
include/PID_INFORMATION_GUI/: pid_information_gui.cpp  pid_information_gui.h  pid_information_gui.ui
launch/: launch_ROS_nodes_in_bbb.launch  launch_ROS_nodes_in_client.launch
lib/: CMakeLists.txt
lib/CANbus/: CANbusInterface.cpp  CANbusInterface.h  CANbusReader.cpp  CANbusReader.h  CMakeLists.txt  DataFromCANbus.cpp  DataFromCANbus.h  QueueData.h
lib/Concurrency/: CMakeLists.txt  Latch.cpp  Latch.h  Queue.cpp  Queue.h
msg/: FSRSMessage.msg  FeetFSRSThresholdsMessage.msg  ForcesMessage.msg  JointAnglesMessage.msg  PIDMessage.msg  ParallelSpringMessage.msg  PatternsMessage.msg  SegmentationMessage.msg  SensorsMessage.msg  SingleCommandMessage.msg  TorquesMessage.msg
scripts/: README.txt  compile.sh  launch_ROS_nodes_in_bbb.sh  launch_ROS_nodes_in_client.sh  launch_roscore_in_client.sh  rbbiomot.sh  synchronize_bbb_date_with_time_server.sh
src/: aux_var_gui_node.cpp  commands_gui_node.cpp  joint_angles_gui_node.cpp  joint_information_gui_node.cpp  parallel_spring_information_gui_node.cpp  patterns_gui_node.cpp  pid_gui_node.cpp  pid_information_gui_node.cpp
src_bbb/: CMakeLists.txt  fsrs_node.cpp  interruptFunctions.cpp  pattern_node.cpp  rx_node.cpp  tx_node.cpp
src_bbb/include/: interruptFunctions.h
