<?xml version="1.0"?>
<package>
  <name>h2r</name>
  <version>1.0.0</version>
  <description>The BIOMOT exoskeleton package</description>
  <maintainer email="jfrascon@gmail.com">ubuntu</maintainer>
  <license>MIT</license>
  <url type="website">http://www.biomotproject.eu/</url>
  <author email="jfrascon@gmail.com">Juan Francisco Rascón Crespo</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
